Fix image size on mobile (?)

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -603,10 +603,10 @@ div.introduction{
 }
 
 .chapter-text img {
-  /* max-width: 600px;
+  max-width: 600px;
   max-height: 400px;
   width: 100%;
-  height: auto; */
-  max-width: 100%;
-  max-height: 100%;
+  height: auto;
+  /* max-width: 100%;
+  max-height: 100%; */
 }
